# GraphAudit

./: .gitignore  README.md  detections.py  graphcrawl.py  graphdata.py  graphdiff.py  main.py  pyproject.toml  render.py  requirements.txt
config/: render_config.yaml
detections/: 01_detection.yaml  02_detection.yaml  03_detection.yaml  detection_01.yaml  detection_02.yaml  detection_03.yaml
src/GraphAudit/: __init__.py  config.py  detections.py  graphcrawl.py  graphdata.py  graphdiff.py  log.py  main.py  render.py
