[project]
name = "graphaudit"
version = "0.0.1"
description = "Microsoft Graph audit and analysis tool"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas",
    "duckdb",
    "msgraph-sdk",
    "rich",
    "PyYAML",
    "jmespath"
]

[project.scripts]
graphaudit = "GraphAudit.main:main" 

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]